k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: primomcp
  namespace: mcpprimo
spec:
  type: ClusterIP
  selector:
    app: primomcp
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
